cloud-infra-macros/tests/fails/zipfile_wrong_extension.rs
use cloud_infra_macros::zipfile;

fn example() {
    let file = zipfile!("package.tar.gz");
}

fn main() {}